changed loading image

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         
         <div id="preloader">
             <div class="loader">
-                <img src="img/loading.gif" width="80" alt="">
+                <img src="img/logo.png" width="80" alt="">
             </div>
         </div><!-- Preloader -->
         
