--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="container">
                <div class="section_heading align-center mb-40">
                    <h2>Our Spa Services</h2>
-                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br>It has survived not only five centuries.</p>
+                   <p>Employing a skin care regimen such as healthy skin facials and advanced skin treatments <br>can help your skin be healthier, feel clearer and look younger.</p>
                </div>
                 <div class="col-sm-3 col-xs-6 xs-padding">
                    <div class="service_content align-center">
@@ -149,7 +149,7 @@
                    <div class="service_content align-center">
                         <img src="img/service-4.jpg" alt="Services">
                         <h3>Face Masking</h3>
-                        <p>Each face mask has been expertly formulated with your skin’s needs in mind to help your skin look and feel as good as you do on the inside.</p>
+                        <p>Expertly formulated with your skin’s needs in mind to help your skin look and feel as good as you do on the inside.</p>
                    </div>
                 </div>
             </div>
@@ -160,7 +160,7 @@
                 <div class="col-sm-6">
                    <div class="book_content">
                        <h2>Make An Appointment</h2>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br>It has survived not only five centuries.</p>
+                        <p>Book your appointment today!</p>
                    </div>
                 </div>
                 <div class="col-sm-6">
