added more content

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         
         <div id="preloader">
             <div class="loader">
-                <img src="img/logo.png" width="80" alt="">
+                <img src="img/logo.png" alt="">
             </div>
         </div><!-- Preloader -->
         
@@ -167,7 +167,7 @@
                     <div class="book_form">
 						<div class="section_heading mb-40">
 							<h2>Appointment Now</h2>
-							<p>Lorem Ipsum is simply dummy text of the printing and industry.<br>It has survived not only five centuries.</p>
+							<p>Fill out the form out below to book your appointment. <br>We will call you to confirm your date.</p>
 						</div>
 						<form action="http://wowthemez.com/demos/barbershop/appointment.php" method="post" id="appointment_form" class="form-horizontal">
 							<div class="form-group">
