added more content

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 				</div>
 				<div class="col-md-4 col-xs-6 xs-padding">
 					<div class="footer_widget">
-                        <h3>Address</h3>
+                        <h3>Location</h3>
                         <h4>29760 Rancho California Rd, Temecula, CA 92591
                         <br>FOR BOOKING: (909) 645 8680</h4>
 					</div>
