added margin to logo in footer

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 			<div class="container">
 				<div class="col-md-4 col-xs-6 xs-padding">
 					<div class="footer_widget">
-						<img class="mb-15" src="img/logo.png" alt="Brand">
+						<img style="margin-top: -10px;" src="img/logo.png" alt="Brand">
 					</div>
 				</div>
 				<div class="col-md-4 col-xs-6 xs-padding">
