changed bootstrap col in footer

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 								<span class="price">$20</span>
                             </li>
                             <li>
-								<h4>Cabana Bay</h4>
+								<h4>Cabana Boy</h4>
 								<span class="price">$55</span>
 							</li>
 						</ul>
@@ -401,7 +401,7 @@
 		<section id="subscribe" class="widget_section padding">
 			<div class="container">
 				<div class="col-md-4 col-xs-12 xs-padding">
-					<div class="footer_widget">
+					<div class="footer_widget footer_widget_logo">
 						<img style="margin-top: -10px;" src="img/logo.png" alt="Brand">
 					</div>
 				</div>
