changed settings in phpmailer

--- a/index.html
+++ b/index.html
@@ -187,15 +187,7 @@
 								</div>
 							</div>
 							<div class="form-group">
-							    <div class="col-xs-6">
-									<select class="form-control" id="services" name="services">
-									  <option>Services</option>
-									  <option>Facials</option>
-									  <option>Sugaring</option>
-									  <option>Microdermabrasion Treatments</option>
-									</select>
-								</div>
-								<div class="col-xs-6">
+								<div class="col-xs-12">
 									<button id="app_submit" class="default_btn pull-right" type="submit">Book Now</button>
 								</div>
 							</div>
@@ -451,7 +443,7 @@
                     <p></p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-color" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn default_btn" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
