changed email format in php

--- a/index.html
+++ b/index.html
@@ -175,15 +175,15 @@
 									<input type="text" id="name" name="name" class="form-control" placeholder="Name" required="">
 								</div>
 								<div class="col-xs-6">
-									<input type="email" id="email" name="email" class="form-control" placeholder="Your Email" required="">
+									<input type="time" id="time" name="time" class="form-control" value="13:30" required="">
 								</div>
 							</div>
 							<div class="form-group">
 								<div class="col-xs-6">
-									<input type="text" id="phone" name="phone" class="form-control" placeholder="Your Phone No" required="">
+									<input type="text" id="phone" name="phone" class="form-control" placeholder="Your Phone Number" required="">
 								</div>
 								<div class="col-xs-6">
-									<input type="text" id="time" name="time" class="form-control" placeholder="Your Free Time" required="">
+									<input type="date" id="date" name="date" class="form-control" required="">
 								</div>
 							</div>
 							<div class="form-group">
