--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                                     <input type="time" id="time" name="time" class="form-control" value="13:30" required="">
 								</div>
 								<div class="col-xs-6">
-									<input type="date" id="date" name="date" class="form-control" required="" data-role="date">
+									<input type="date" id="date" name="date" class="form-control" value="mm/dd/yyyy" required="">
 								</div>
 							</div>
 							<div class="form-group">
