--- a/index.html
+++ b/index.html
@@ -172,19 +172,19 @@
 						</div>
 						<form action="" method="post" id="appointment_form" class="form-horizontal">
 							<div class="form-group">
-								<div class="col-xs-6">
+								<div class="col-xs-12 col-md-6">
 									<input type="text" id="name" name="name" class="form-control" placeholder="Name" required="">
 								</div>
-								<div class="col-xs-6">
+								<div class="col-xs-12 col-md-6">
                                     <input type="text" id="phone" name="phone" class="form-control" placeholder="Phone Number" required="">
 								</div>
 							</div>
 							<div class="form-group">
-								<div class="col-xs-6">
+								<div class="col-xs-12 col-md-6">
                                     <input type="time" id="time" name="time" class="form-control" value="13:30" required="">
 								</div>
-								<div class="col-xs-6">
-									<input type="date" id="date" name="date" class="form-control" value="mm/dd/yyyy" required="">
+								<div class="col-xs-12 col-md-6">
+									<input type="date" id="date" name="date" class="form-control" required="">
 								</div>
 							</div>
 							<div class="form-group">
