--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
         <script src="js/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 
+        <!-- Bootstrap Date-Picker Plugin -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
     </head>
     <body class="loaded">
         <!--[if lt IE 8]>
@@ -172,19 +174,19 @@
 						</div>
 						<form action="" method="post" id="appointment_form" class="form-horizontal">
 							<div class="form-group">
-								<div class="col-xs-12 col-md-6">
+								<div class="col-xs-6">
 									<input type="text" id="name" name="name" class="form-control" placeholder="Name" required="">
 								</div>
-								<div class="col-xs-12 col-md-6">
+								<div class="col-xs-6">
                                     <input type="text" id="phone" name="phone" class="form-control" placeholder="Phone Number" required="">
 								</div>
 							</div>
 							<div class="form-group">
-								<div class="col-xs-12 col-md-6">
+								<div class="col-xs-6">
                                     <input type="time" id="time" name="time" class="form-control" value="13:30" required="">
 								</div>
-								<div class="col-xs-12 col-md-6">
-									<input type="date" id="date" name="date" class="form-control" required="">
+								<div class="col-xs-6">
+									<input type="text" id="date" name="date" class="form-control" placeholder="mm/dd/yyyy" required="">
 								</div>
 							</div>
 							<div class="form-group">
@@ -479,6 +481,20 @@
 		<script src="js/book.js"></script>
 		<!-- Main JS -->
         <script src="js/main.js"></script>
-        
-    
+        <!-- Date Picker -->
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
+        <script>
+                $(document).ready(function(){
+                  var date_input=$('input[name="date"]'); //our date input has the name "date"
+                  var container=$('.book_form').length>0 ? $('.book_form').parent() : "body";
+                  var options={
+                    format: 'mm/dd/yyyy',
+                    orientation: 'bottom right',
+                    container: container,
+                    todayHighlight: true,
+                    autoclose: true,
+                  };
+                  date_input.datepicker(options);
+                })
+        </script>
 </body></html>
