--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
         <link rel="stylesheet" href="css/main.css">
 		<!-- Responsive CSS -->
         <link rel="stylesheet" href="css/responsive.css">
+        <!-- jQueryUI CSS -->
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
         <script src="js/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-
-        <!-- Bootstrap Date-Picker Plugin -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
     </head>
     <body class="loaded">
         <!--[if lt IE 8]>
@@ -183,7 +182,7 @@
 							</div>
 							<div class="form-group">
 								<div class="col-xs-6">
-                                    <input type="text" id="date" name="date" class="form-control" placeholder="mm/dd/yyyy" required="">
+                                    <input type="date" id="date" name="date" class="form-control" placeholder="mm/dd/yyyy" required="">
 								</div>
 								<div class="col-xs-6">
 									<input type="time" id="time" name="time" class="form-control" value="13:30" required="">
@@ -481,20 +480,17 @@
 		<script src="js/book.js"></script>
 		<!-- Main JS -->
         <script src="js/main.js"></script>
-        <!-- Date Picker -->
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
+        <!-- jQuery Datepicker UI -->
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <script>
-                $(document).ready(function(){
-                  var date_input=$('input[name="date"]'); //our date input has the name "date"
-                  var container=$('.book_form').length>0 ? $('.book_form').parent() : "body";
-                  var options={
-                    format: 'mm/dd/yyyy',
-                    orientation: 'bottom right',
-                    container: container,
-                    todayHighlight: true,
-                    autoclose: true,
-                  };
-                  date_input.datepicker(options);
-                })
+            if (!Modernizr.touch || !Modernizr.inputtypes.date) {
+                $('input[type=date]')
+                    .attr('type', 'text')
+                    .datepicker({
+                        // Consistent format with the HTML5 picker
+                        dateFormat: 'yy-mm-dd'
+                    });
+            }
         </script>
-</body></html>
+</body>
+</html>
