added script for date picker

--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                     .attr('type', 'text')
                     .datepicker({
                         // Consistent format with the HTML5 picker
-                        dateFormat: 'yy-mm-dd'
+                        dateFormat: 'mm-dd-yy'
                     });
             }
         </script>
