--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 									<input type="text" id="name" name="name" class="form-control" placeholder="Name" required="">
 								</div>
 								<div class="col-xs-6">
-                                    <input type="text" id="phone" name="phone" class="form-control" placeholder="Phone Number" required="">
+                                    <input type="tel" id="phone" name="phone" class="form-control" placeholder="Phone Number" required="">
 								</div>
 							</div>
 							<div class="form-group">
