--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 							</div>
 							<div class="form-group">
 								<div class="col-xs-6">
-                                    <input type="date" id="date" name="date" class="form-control" placeholder="mm/dd/yyyy" required="">
+                                    <input type="date" id="date" name="date" class="form-control" placeholder="YYYY-MM-DD" required pattern="(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])/(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])/(?:30))|(?:(?:0[13578]|1[02])-31))" title="Enter a date in this format YYYY/MM/DD" required="">
 								</div>
 								<div class="col-xs-6">
 									<input type="time" id="time" name="time" class="form-control" value="13:30" required="">
@@ -488,7 +488,7 @@
                     .attr('type', 'text')
                     .datepicker({
                         // Consistent format with the HTML5 picker
-                        dateFormat: 'mm-dd-yy'
+                        dateFormat: 'yy-mm-dd'
                     });
             }
         </script>
