customized datepicker function

--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                         beforeShowDay: function(date) {
                             var day = date.getDay();
                             var string = jQuery.datepicker.formatDate('yy-mm-dd', date);
-                            var array = ['2018-03-03, 2018-03-17, 2018-03-31'];
+                            var array = ['2018-03-03', '2018-03-17', '2018-03-31'];
                             if (day == 0 || day == 1 || day == 2 || day == 4){
                                 return [false];
                             }
