--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <link rel="stylesheet" href="css/responsive.css">
         <!-- jQueryUI CSS -->
         <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+        <!-- jQueryUI TimePicker CSS -->
+        <link rel="stylesheet" href="css/jquery.timepicker.css">
 
         <script src="js/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
@@ -185,7 +187,7 @@
                                     <input type="date" id="date" name="date" class="form-control" placeholder="YYYY-MM-DD" required pattern="(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])/(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])/(?:30))|(?:(?:0[13578]|1[02])-31))" title="Enter a date in this format YYYY/MM/DD" readonly='true' required="">
 								</div>
 								<div class="col-xs-6">
-									<input type="time" id="time" name="time" class="form-control" value="13:30" required="">
+									<input type="text" id="time" name="time" value="Your free time" class="form-control" required="">
 								</div>
 							</div>
 							<div class="form-group">
@@ -429,8 +431,10 @@
         <script src="js/main.js"></script>
         <!-- jQuery Datepicker UI -->
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+        <!-- jQuery Timepicker JS -->
+        <script src="js/jquery.timepicker.js"></script>
         <script>
-            $('input[type=date]')
+            $('#date')
                 .attr('type', 'text')
                 .datepicker({
                     // Consistent format with the HTML5 picker
@@ -450,6 +454,11 @@
                             return [true];
                         }
                     }
+                });
+            $('#time')
+                .timepicker({
+                    'minTime': '10:00am',
+                    'maxTime': '8:00pm',
                 });
         </script>
 </body>
