added more content

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                 <div class="slider_content">
                                     <h3 class="text-white">Welcome To Kaliforniadoll Skin Care</h3>
                                     <h1 class="text-white">Advanced <br>Skin Care Treatments</h1>
-                                    <p class="text-white">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br> It has survived not only five centuries.</p>
+                                    <p class="text-white">We offer special skin care treatments to promote cell regeneration and <br> improve skin health to diminish fine lines, wrinkles, and skin conditions.</p>
                                     <div class="btn_group">
                                         <a href="#services" class="default_btn">Services</a>
                                         <a href="#book" class="default_btn">Book Now</a>
@@ -93,7 +93,7 @@
                             <div class="table-cell">
                                 <div class="slider_content">
                                     <h1 class="text-white">Feel More Radiant<br>Feel More Youthful.</h1>
-                                    <p class="text-white">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br> It has survived not only five centuries.</p>
+                                    <p class="text-white">Beautiful soft, smooth and glowing skin so you can look as good as you feel <br> and get even more of those compliments you love.</p>
                                     <div class="btn_group">
                                         <a href="#services" class="default_btn">Services</a>
                                         <a href="#book" class="default_btn">Book Now</a>
@@ -109,7 +109,7 @@
                             <div class="table-cell">
                                 <div class="slider_content">
                                     <h1 class="text-white">Get Sugared <br>Feel Smooth.</h1>
-                                    <p class="text-white">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br> It has survived not only five centuries.</p>
+                                    <p class="text-white">Enhance the look and feel of your skin by <br> getting smooth with Sugaring.</p>
                                     <div class="btn_group">
                                         <a href="#services" class="default_btn">Services</a>
                                         <a href="#book" class="default_btn">Book Now</a>
@@ -139,7 +139,7 @@
                    <div class="service_content align-center">
                         <img src="img/service-2.jpg" alt="Services">
                         <h3>Sugaring</h3>
-                        <p>Enhance the look and feel of your skin by getting smooth with Sugaring. The painless alternative to waxing.</p>
+                        <p>Pure and natural ingredients, no risk of burning, easier to cleanup, wont stick to live skin, and never dries on skin.</p>
                    </div>
                 </div>
                 <div class="col-sm-3 col-xs-6 xs-padding">
@@ -205,7 +205,6 @@
            <div class="container">
              <div class="section_heading align-center mb-40">
 					<h2>Spa Pricing</h2>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br>It has survived not only five centuries.</p>
 				</div><!-- /.section_heading -->
                 <div class="col-sm-4 xs-padding">
                     <div class="price_wrap">
@@ -347,8 +346,7 @@
                <div class="display-table">
                    <div class="table-cel">
                        <div class="cta_content align-center">
-                           <h2>Pop in <br>and get smooth!</h2>
-                           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br>It has survived not only five centuries.</p>
+                           <h2>Pop in and get smooth!</h2>
                        </div>
                    </div>
                </div>
