--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                                     <input type="date" id="date" name="date" class="form-control" placeholder="YYYY-MM-DD" required pattern="(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])/(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])/(?:30))|(?:(?:0[13578]|1[02])-31))" title="Enter a date in this format YYYY/MM/DD" readonly='true' required="">
 								</div>
 								<div class="col-xs-6">
-									<input type="text" id="time" name="time" value="Your free time" class="form-control" required="">
+									<input type="text" id="time" name="time" placeholder="Your free time" class="form-control" required="">
 								</div>
 							</div>
 							<div class="form-group">
